Add puppeteer
