# src/api.ts
@@ -4,6 +4,7 @@ import path from 'path';
 import * as Lambda from 'aws-lambda';
 import { replyJSON } from './util/lambda-util';
 import { composePdfHttpHandler } from './http/pdf-http';
+import { composeHtmlHttpHandler } from './http/html-http';
 
 // define api + handlers
 const api = new OpenAPIBackend({
@@ -11,7 +12,8 @@ const api = new OpenAPIBackend({
 });
 
 api.register({
-  composePdf: composePdfHttpHandler,
+  composePDF: composePdfHttpHandler,
+  composeHTML: composeHtmlHttpHandler,
   notFound: async (c, event: Lambda.APIGatewayProxyEvent, context: Lambda.Context) => replyJSON({ err: 'not found' }),
   notImplemented: async (c, event: Lambda.APIGatewayProxyEvent, context: Lambda.Context) =>
     replyJSON(api.mockResponseForOperation(c.operation.operationId)),
@@ -22,6 +24,7 @@ api.register({
 api.init();
 
 export async function handler(event: Lambda.APIGatewayProxyEvent, context: Lambda.Context) {
+  console.info(event);
   return api.handleRequest(
     {
       method: event.httpMethod,
